--- a/src/pages/add-product/add-product.html
+++ b/src/pages/add-product/add-product.html
@@ -1,68 +1,71 @@
 <ion-header>
-    <ion-navbar>
-      <ion-title>Add Product</ion-title>
-    </ion-navbar>
-  </ion-header>
-  <ion-content class="full-background">
-    <div class="search-spinner">
-      <ion-spinner name="crescent" *ngIf="!categoryListAvailable"></ion-spinner>
-    </div>
-    <ion-card *ngIf="categoryListAvailable">
-      <ion-card-header text-center>Add Product</ion-card-header>
-      <ion-card-content>
-        <ion-grid>
-            <ion-row>
-              <ion-col>
-                <ion-list>
-                  <ion-item>
-                    <ion-label><ion-icon md="cube" padding-right class="primary-color-icon"></ion-icon>Category</ion-label>
-                    <ion-select [(ngModel)]="selectedCategory" interface="popover" [compareWith]="compareFn">
-                      <ion-option *ngFor="let category of categoryList" [value]="category">{{category.name}}</ion-option>
-                    </ion-select>
-                  </ion-item>
-                </ion-list>
-              </ion-col>  
-              <ion-col>
-                <ion-item>
-                  <ion-label><ion-icon class="pin" padding-right class="primary-color-icon"></ion-icon>Price Type</ion-label>
-                    <ion-select [(ngModel)]="selectedPriceType" interface="popover">
-                      <ion-option *ngFor="let priceType of priceTypeList" [value]="priceType">{{priceType}}</ion-option>
-                    </ion-select>
-                  </ion-item>
-                <form [formGroup]="addProductForm">
-                  <ion-item>
-                    <ion-label floating>Name</ion-label>
-                    <ion-input type="text" formControlName="name"></ion-input>
-                  </ion-item>
-                    <ion-item *ngIf="name.hasError('required') && name.touched">
-                    <p style="color: red">name is required*</p>
-                  </ion-item>
+  <ion-navbar>
+    <ion-title>Add Product</ion-title>
+  </ion-navbar>
+</ion-header>
+<ion-content class="full-background">
+  <div class="search-spinner">
+    <ion-spinner name="crescent" *ngIf="!categoryListAvailable"></ion-spinner>
+  </div>
+  <ion-grid *ngIf="categoryListAvailable">
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-item>
+            <ion-label>
+              <ion-icon name="cube" padding-right color="grey"></ion-icon>
+              Category
+            </ion-label>
+            <ion-select [(ngModel)]="selectedCategory" interface="popover" [compareWith]="compareFn">
+              <ion-option *ngFor="let category of categoryList" [value]="category">{{category.name}}</ion-option>
+            </ion-select>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-label>
+            <ion-icon name="pin" padding-right  color="grey"></ion-icon>
+            Price Type
+          </ion-label>
+          <ion-select [(ngModel)]="selectedPriceType" interface="popover">
+            <ion-option *ngFor="let priceType of priceTypeList" [value]="priceType">{{priceType}}</ion-option>
+          </ion-select>
+        </ion-item>
+        <form [formGroup]="addProductForm">
+          <ion-item>
+            <ion-label floating>Name</ion-label>
+            <ion-input type="text" formControlName="name"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="name.hasError('required') && name.touched">
+            *Name is required
+          </p>
 
-                  <ion-item>
-                    <ion-label floating>Product Code</ion-label>
-                    <ion-input type="text" formControlName="productCode"></ion-input>
-                  </ion-item>
-                    <ion-item *ngIf="productCode.hasError('required') && productCode.touched">
-                    <p style="color: red">product code is required*</p>
-                  </ion-item>
+          <ion-item>
+            <ion-label floating>Product Code</ion-label>
+            <ion-input type="text" formControlName="productCode"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="productCode.hasError('required') && productCode.touched">
+            *Product code is required
+          </p>
 
-                  <ion-item>
-                    <ion-label floating>Product Sys Code</ion-label>
-                    <ion-input type="text" formControlName="productSysCode"></ion-input>
-                  </ion-item>
-                  <ion-item *ngIf="productSysCode.hasError('required') && productSysCode.touched">
-                    <p style="color: red">product sys code is required*</p>
-                  </ion-item>
+          <ion-item>
+            <ion-label floating>Product Sys Code</ion-label>
+            <ion-input type="text" formControlName="productSysCode"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="productSysCode.hasError('required') && productSysCode.touched">
+            *Product sys code is required
+          </p>
 
-                  <ion-item>
-                    <ion-label floating>Price</ion-label>
-                    <ion-input type="text" formControlName="price"></ion-input>
-                  </ion-item>
-                  <ion-item *ngIf="price.hasError('required') && price.touched">
-                    <p style="color: red">price is required*</p>
-                  </ion-item>
+          <ion-item>
+            <ion-label floating>Price</ion-label>
+            <ion-input type="text" formControlName="price"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="price.hasError('required') && price.touched">
+            *Price is required*
+          </p>
 
-                 <!--  <ion-item>
+          <!--  <ion-item>
                     <ion-label floating>Price Type</ion-label>
                     <ion-input type="text" formControlName="priceType"></ion-input>
                   </ion-item>
@@ -70,31 +73,28 @@
                     <p style="color: red">Price Type is required*</p>
                   </ion-item> -->
 
-                  <ion-item>
-                    <ion-label floating>Pack Type</ion-label>
-                    <ion-input type="text" formControlName="packType"></ion-input>
-                  </ion-item>
-                  <ion-item *ngIf="packType.hasError('required') && packType.touched">
-                    <p style="color: red">Pack Type is required*</p>
-                  </ion-item>
+          <ion-item>
+            <ion-label floating>Pack Type</ion-label>
+            <ion-input type="text" formControlName="packType"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="packType.hasError('required') && packType.touched">
+            *Pack Type is required*
+          </p>
 
+          <ion-item>
+            <ion-label floating>Current Case Size</ion-label>
+            <ion-input type="text" formControlName="currentCaseSize"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="currentCaseSize.hasError('required') && currentCaseSize.touched">
+            *Case size is required
+          </p>
 
-                  <ion-item>
-                    <ion-label floating>Current Case Size</ion-label>
-                    <ion-input type="text" formControlName="currentCaseSize"></ion-input>
-                  </ion-item>
-                    <ion-item *ngIf="currentCaseSize.hasError('required') && currentCaseSize.touched">
-                    <p style="color: red">case size is required*</p>
-                  </ion-item>
-
-                  <ion-grid>
-                    <button ion-button color="secondary" [disabled]="!(addProductForm.valid)" (click)="addProduct();">Add Product<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
-                  </ion-grid>
-                </form>
-              </ion-col>
-            </ion-row>
+          <ion-grid>
+            <button ion-button color="secondary" [disabled]="!(addProductForm.valid)" (click)="addProduct();">Add
+              Product<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-grid>
-      </ion-card-content>
-    </ion-card>
-  </ion-content>
-  
+        </form>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
