--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  <link href="./assets/dist/jsoneditor.css" rel="stylesheet" type="text/css">
+  <script src="./assets/dist/jsoneditor.js"></script>
+
 
 </body>
 </html>
