--- a/src/pages/admin-list-user/admin-list-user.html
+++ b/src/pages/admin-list-user/admin-list-user.html
@@ -19,7 +19,7 @@
       <span>{{user.externalId}}</span><span>{{user.name}}</span>
       <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="arrow-forward"></ion-icon></h1></button> -->
       <button ion-button clear color="secondary" item-end (click)="resetPasswordModel(user)">
-        <img src="./assets/imgs/key.svg">
+        <img src="assets/imgs/key.svg">
       </button>
     </ion-item>
   </ion-list>
