--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -108,13 +108,13 @@
         <ion-row>
           <ion-col col-12>
             <ion-row>
-              <ion-col col-3 text-left style="padding-top: 7%">
-                <span>Quantity: </span>
+              <ion-col col-2 text-left style="padding-top: 7%">
+                <span>Qty: </span>
               </ion-col>
               <ion-col col-2>
                 <input type='text' name='quantity' [(ngModel)]="product.quantity" value='0' class='qty' style="width: 40px;height: 25px;text-align: center;margin-top: 10px;" />
               </ion-col>
-              <ion-col col-7 text-right>
+              <ion-col col-8 text-right>
                 <button ion-button color="secondary" (click)="updateCart(product)" style="color: white!important;">
                   <strong>
                     <ion-icon name="cart"></ion-icon>Update
