--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -63,7 +63,7 @@
           </ion-row>
       </ion-card-content>
     </ion-card>
-    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    </ion-infinite-scroll> -->
 </ion-content>
