review order fixed haeder issue

--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -58,7 +58,7 @@
         </ion-row>
     </ion-card> -->
   <ion-list>
-    <ion-card class="sticky-custom">
+    <ion-card>
       <ion-card-header text-center>
         <ion-row>
           <ion-col col-12>
