[Update] admin to ADMIN and customer to CUSTOMER

--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -52,7 +52,7 @@
       </ion-row>
         <ion-row>
           <ion-col text-center>
-              <ion-icon color="grey" name="happy"></ion-icon>
+              <ion-icon color="grey" name="customer"></ion-icon>
               Customer: {{order.userDetail.name}} [{{order.userDetail.externalId}}]
           </ion-col>
         </ion-row>
@@ -71,7 +71,7 @@
           <ion-col text-center>
               <ion-icon color="grey" name="cash"></ion-icon> Total: {{order.orderTotal}} ZMW
           </ion-col>
-          <ion-col text-center class="{{order.status}}"> 
+          <ion-col text-center class="{{order.status}}">
             <ion-icon color="grey" name="podium"></ion-icon>Status: <strong text-uppercase>{{order.status}}</strong>
           </ion-col>
         </ion-row>
