--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -52,7 +52,7 @@
       </ion-row>
         <ion-row>
           <ion-col text-center>
-              <ion-icon color="grey" name="happy"></ion-icon>
+              <ion-icon color="grey" name="customer"></ion-icon>
               Customer: {{order.userDetail.name}} [{{order.userDetail.externalId}}]
           </ion-col>
         </ion-row>
