--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -57,7 +57,7 @@
               <ion-icon name="cart" color="grey"></ion-icon>Order Id: <span>{{orderDetail.orderId}}</span>
             </ion-col>
             <ion-col col-12 text-center>
-              <ion-icon name="customer" color="grey"></ion-icon> Customer Name: <span>{{orderDetail.userDetail.name}}</span>
+              <ion-icon name=help-buoy color="grey"></ion-icon> Customer Name: <span>{{orderDetail.userDetail.name}}</span>
             </ion-col>
             <ion-col col-12 text-center>
               <ion-icon name="pin" color="grey"></ion-icon> Province: <span>{{orderDetail.userDetail.country}} [ {{orderDetail.userDetail.province}} ]</span>
