--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -67,6 +67,11 @@
             </strong>
           </ion-col>
           <ion-col col-12>
+            <strong>
+              <ion-icon name="trophy"></ion-icon> Total TK Points: {{totalTK}}
+            </strong>
+          </ion-col>
+          <ion-col col-12>
             <button ion-button outline color="secondary" (click)="openCategoryTotalModal()">View Category Wise Total</button>
           </ion-col>
         </ion-row>
