--- a/src/pages/admin-list-user/admin-list-user.html
+++ b/src/pages/admin-list-user/admin-list-user.html
@@ -6,7 +6,7 @@
     <ion-title>Customer List</ion-title>
   </ion-navbar>
   <ion-toolbar>
-    <ion-searchbar (ionInput)="searchCustomers()" [(ngModel)]="searchQuery" placeholder="Search Customers"></ion-searchbar>
+    <ion-searchbar  #q (ionChange)="searchCustomers(q.value)" placeholder="Search Customers"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
